// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svgProps should add a new prop 1`] = `
"<svg focusable={true} hidden={true} color=\\"#fff\\">
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgProps should add multiple props to svg 1`] = `
"<svg focusable={false} hidden={hidden}>
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgProps should add one prop to svg 1`] = `
"<svg focusable={false}>
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgProps should update old prop to the new prop 1`] = `
"<svg focusable={true}>
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;
